--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #8a4a4a;
 }
 
 .App-logo {
@@ -7,21 +8,18 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.colorText{
+  color:#00ffaa;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #000000;
+.AppFondo{
+  background-color: #daadad;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: rgb(153, 68, 68);
 }
 
 .App-link {
